@@ -135,6 +135,7 @@ Bug fixes:
 - PR#6010: Big_int.extract_big_int gives wrong results on negative arguments
 - PR#6024: Format syntax for printing @ is incompatible with 3.12.1
 - PR#6001: Reduce the memory used by compiling Camlp4
+- PR#6031: Camomile problem with -with-frame-pointers
 - PR#6032: better Random.self_init under Windows
 - PR#6033: Matching.inline_lazy_force needs eta-expansion (command-line flags)
 
